# shotlist

./: .capture.yaml  .gitignore  .shotlist.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  demo.tape  pyproject.toml
.github/ci-demo/: .capture.yaml  .shotlist.yaml
.github/workflows/: ci.yml  publish.yml  verify-action.yml
demo/: _setup.sh
docs/: design.md  how-it-works.md  pipeline.md  recipes.md  test-evidence.md
docs/screenshots/: index.html  manifest.json
integrations/agents/: AGENTS.md
integrations/claude/: README.md
integrations/claude/hooks/: README.md  auto-snapshot.sh
integrations/claude/skills/capture/: SKILL.md
integrations/claude/skills/shotlist/: SKILL.md
integrations/cursor/: shotlist.mdc
src/capture/: __init__.py  check.py  cli.py  config.py  diff.py  engine.py  lifecycle.py  output.py  render.py  report.py
src/capture/backends/: __init__.py  cli.py  native_terminal.py  web.py
src/shotlist/: __init__.py  check.py  cli.py  config.py  diff.py  engine.py  lifecycle.py  output.py  render.py  report.py
src/shotlist/backends/: cli.py  native_terminal.py  web.py
tests/: conftest.py  test_check.py  test_cli_app.py  test_cli_backend.py  test_config.py  test_diff.py  test_engine.py  test_lifecycle.py  test_native_terminal.py  test_output.py  test_report.py  test_web.py
