[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shotlist"
version = "0.3.3"
description = "Reproducible screenshot capture for docs — drive a web app or CLI from a declarative shot list and capture polished feature screenshots."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Varma Budharaju", email = "sairam.vzf33@gmail.com" }]
keywords = ["screenshots", "documentation", "playwright", "readme", "cli"]
dependencies = [
    "playwright>=1.40",
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "ansi2html>=1.9",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
shotlist = "shotlist.cli:app"

[project.urls]
Homepage = "https://github.com/varmabudharaju/shotlist"
Repository = "https://github.com/varmabudharaju/shotlist"
Issues = "https://github.com/varmabudharaju/shotlist/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shotlist"]

[tool.hatch.build.targets.sdist]
# The README links images by absolute URL, so the package doesn't need to ship
# the screenshots, the demo GIF, or the GIF source. Keeps the sdist small.
exclude = [
    "docs/screenshots",
    "docs/diagrams",
    "docs/demo.gif",
    "docs/proof-report.png",
    "docs/check.png",
    "docs/check-report.png",
    "docs/diff-example.png",
    "demo",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["shotlist"]
branch = true
